# conversational-ai-whatsapp

./: .dockerignore  .env.example  .gitignore  .mcp.json  .pre-commit-config.yaml  AGENTS.md  README.md  README.pt-BR.md  docker-compose.yml  pyproject.toml
.genie/: workspace.json
.github/workflows/: eval.yml  test.yml
agents/nutrition/: AGENTS.md  agent.yaml
db/init/: 01-create-omni-db.sql
db/migrations/: 001_init.sql
db/seed/: Dockerfile  seed.py  taco.csv
docs/: 2026-04-30-agent-reasoning-tests-plan.md  2026-04-30-automated-tests-plan.md  2026-04-30-dockerized-setup-plan.md  2026-04-30-mcp-error-envelope-plan.md  2026-04-30-pre-commit-hooks-plan.md  docs.md  technical-test.md
docs/specs/: 2026-04-29-nutrition-agent-design.md  2026-04-30-agent-reasoning-tests-design.md  2026-04-30-automated-tests-design.md  2026-04-30-dockerized-setup-design.md  2026-04-30-mcp-error-envelope-design.md  2026-04-30-pre-commit-hooks-design.md  2026-04-30-reproducible-setup-design.md
docs/superpowers/specs/: 2026-04-29-nutrition-agent-design.md
genie/: Dockerfile
mcp-server/: Dockerfile  pyproject.toml
mcp-server/src/nutrition_tools/: calculator.py  db.py  errors.py  server.py  tools.py
mcp-server/tests/: conftest.py  test_tools.py
omni/: Dockerfile  entrypoint.sh
scripts/: compose-up.sh  configure-omni.sh  doctor.sh  install-claude-code.sh  install-deps.sh  install-genie.sh  install-omni.sh  pair-whatsapp.sh  register-agent.sh  setup.sh  smoke-test.sh  teardown.sh
scripts/lib/: common.sh
scripts/omni/: install.sh
tests/: conftest.py
tests/agent/: conftest.py  fakes.py  harness.py
tests/agent/eval/: cases.yaml  conftest.py  test_runner.py
tests/agent/mock/: conftest.py  test_errors.py  test_meal_logging.py  test_onboarding.py  test_out_of_domain.py  test_queries.py
tests/integration/: conftest.py  test_errors.py  test_seed.py  test_smoke.py  test_tools.py
tests/unit/: test_calculator.py  test_errors.py
