[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "conversational-ai-whatsapp-tests"
version = "0.0.0"
requires-python = ">=3.11"
dependencies = ["nutrition-tools @ file:./mcp-server"]

[project.optional-dependencies]
test = [
    "pytest>=7.0",
    "testcontainers[postgres]>=4.0",
    "psycopg2-binary>=2.9.0",
    "anthropic>=0.40",
    "pyyaml>=6.0",
]
dev = [
    "pre-commit>=3.7",
    "ruff>=0.8",
]

[tool.setuptools]
packages = []

[tool.pytest.ini_options]
testpaths = ["tests"]
markers = [
    "integration: requires a postgres container (started by tests/conftest.py)",
    "agent_mock: agent loop tests with FakeAnthropicClient (deterministic)",
    "agent_eval: agent loop tests against the real Anthropic API (costs money, opt-in)",
]

[tool.ruff]
target-version = "py311"
line-length = 100
extend-exclude = [".venv", "build", "*.egg-info"]

[tool.ruff.lint]
select = [
    "E", "W",   # pycodestyle errors and warnings
    "F",        # pyflakes
    "I",        # isort
    "B",        # flake8-bugbear
    "UP",       # pyupgrade
    "SIM",      # flake8-simplify
]
ignore = []

[tool.ruff.format]
quote-style = "double"
